--- a/webapp/view/GravarEmpresa.view.xml
+++ b/webapp/view/GravarEmpresa.view.xml
@@ -6,15 +6,14 @@ xmlns:html="http://www.w3.org/1999/xhtml"
 xmlns:f="sap.ui.layout.form">
 	<App>
 		<pages>
-			<Page title="Gravar Empresa"
-				showNavButton="true"
+			<Page showNavButton="true"
 				navButtonPress="onVoltar">
 				<content>
 					<VBox class="sapUiSmallMargin">	
 						<f:SimpleForm id="SimpleFormChange480_Trial"
 						editable="true"
 						layout="ResponsiveGridLayout"
-						title="Nova Empresa"
+						title="{view>/titulo}"
 						labelSpanXL="4"
 						labelSpanL="4"
 						labelSpanM="4"
