--- a/webapp/view/Empresa.view.xml
+++ b/webapp/view/Empresa.view.xml
@@ -6,45 +6,63 @@ xmlns="sap.m"
 xmlns:t="sap.ui.table">
 	<App id="app">
 		<pages>
-			<Page>
+			<Page showHeader="false">
 				<content>
-					<t:Table id="tableEmpresa"
-						rows="{path: '/Empresas'}"
-						alternateRowColors="true">
-						<t:toolbar>
-							<Toolbar>
-								<Title text="Lista de empresas"/> 
-							</Toolbar>
-						</t:toolbar>
-						<t:columns>
-							<t:Column filterProperty="RazaoSocial" sortProperty="RazaoSocial">
-								<Label text="Razão Social"/>
-								<t:template>
-									<Text text="{RazaoSocial}"/>
-								</t:template>
-							</t:Column>
-							<t:Column filterProperty="NomeFantasia" sortProperty="NomeFantasia">
-								<Label text="Nome Fantasia"/>
-								<t:template>
-									<Text text="{NomeFantasia}"/>
-								</t:template>
-							</t:Column>
-							<t:Column filterProperty="Cnpj" sortProperty="Cnpj">
-								<Label text="CNPJ"/>
-								<t:template>
-									<Text text="{Cnpj}"/>
-								</t:template>
-							</t:Column>
-						</t:columns>
-					</t:Table>
+					<Panel headerText="Empresa">
+						<VBox class="sapUiSmallMargin">
+							<t:Table id="tableEmpresa"
+								rows="{path: '/Empresas'}"
+								selectionMode="Single"
+								selectionBehavior="Row"
+								enableSelectAll="false"
+								editable="true"
+								visibleRowCountMode="Interactive"
+								enableBusyIndicator="true"
+								alternateRowColors="true"
+								enableCustomFilter="false">
+								<t:toolbar>
+									<Toolbar>
+										<Title text="Lista de Empresas"/> 
+									</Toolbar>
+								</t:toolbar>
+								<t:columns>
+									<t:Column filterProperty="RazaoSocial" sortProperty="RazaoSocial">
+										<Label text="Razão Social"/>
+										<t:template>
+											<Text text="{RazaoSocial}"/>
+										</t:template>
+									</t:Column>
+									<t:Column filterProperty="Cnpj" sortProperty="Cnpj">
+										<Label text="CNPJ"/>
+										<t:template>
+											<Text text="{Cnpj}"/>
+										</t:template>
+									</t:Column>
+									<t:Column filterProperty="RegimeTributario" sortProperty="RegimeTributario">
+										<Label text="Regime Tributário"/>
+										<t:template>
+											<Text text="{RegimeTributario}"/>
+										</t:template>
+									</t:Column>
+								</t:columns>
+								<t:footer>
+									<Toolbar>
+										<Button icon="sap-icon://refresh" press="onRefresh"/>
+										<ToolbarSpacer/>
+										<Button icon="sap-icon://filter"/>
+										<Button icon="sap-icon://clear-filter"/>
+									</Toolbar>
+								</t:footer>
+							</t:Table>
+						</VBox>
+					</Panel>
 				</content>
 				<footer>
 					<Toolbar>
-						<Button icon="sap-icon://refresh" press="onRefresh"/>
 						<ToolbarSpacer/>
-						<Button text="Incluir novo" press="onIncluir"/>
-						<Button text="Editar" press="onEditar"/>
-						<Button text="Remover" press="onRemover"/>
+						<Button icon="sap-icon://add" text="Incluir novo" press="onIncluir"/>
+						<Button icon="sap-icon://edit" text="Editar" press="onEditar"/>
+						<Button icon="sap-icon://delete" text="Remover" press="onRemover"/>
 					</Toolbar>
 				</footer>
 			</Page>
